@@ -1,6 +1,7 @@
 2014/11/27 (version 1.33)
 - Fixed menu behavior when using GtkStatusIcon.
 - Added icons to the tray menu.
+- Use single menu code for both indicator types.
 
 2014/11/24 (version 1.31)
 - Changed sorting order of tasks in the tray menu: now showing
